package L2_SOLID.L2E1.src;
public enum MonsterType {
    ZOMBIE,
    IMP,
    DEMON,
    CACODEMON
}